--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "caller",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "@substack's caller.js as a module",
   "main": "index.js",
   "files": [
@@ -25,6 +25,5 @@
   },
   "readmeFilename": "README.md",
   "gitHead": "15bef0805246629cc89fb71ded29e674009ffc45",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
